[package]
name = "advent-2022"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[[bin]]
name = "advent-2022"
test = false
doctest = false

[dependencies]
itertools = "0.10.5"
nom = "7.1.1"
rayon = "1.6.1"
regex = { version = "1.7.0", default-features = false, features = ["std", "unicode-perl"] }
ureq = "2.5.0"
